@startuml

' Historical note:
' This diagram describes an earlier architecture snapshot
' Current verification flow uses VerificationPlan, FileVerifier and HashService
' See docs/examples/verification-flow.md and docs/contracts/file-verifier.md

class LauncherEngine <<ApplicationService>>
class LauncherStateMachine
interface OperationManager
class DefaultOperationManager
interface OperationFactory
class DefaultOperationFactory
abstract class LaunchOperation
interface ExecutionStrategy
class SequentialExecutionStrategy
interface LauncherTask
class VerificationTask
class VerificationService
class FileVerifier
class HashVerifier
class FileStorage

LauncherEngine --> LauncherStateMachine
LauncherEngine --> OperationManager

DefaultOperationManager ..|> OperationManager
DefaultOperationManager --> OperationFactory
DefaultOperationManager --> ExecutionStrategy
DefaultOperationManager --> LaunchOperation

DefaultOperationFactory ..|> OperationFactory
DefaultOperationFactory --> LaunchOperation

SequentialExecutionStrategy ..> ExecutionStrategy
SequentialExecutionStrategy --> LauncherTask
LaunchOperation --> SequentialExecutionStrategy
ExecutionStrategy --> LauncherTask

VerificationTask ..|> LauncherTask
VerificationTask --> VerificationService
VerificationService --> FileVerifier
FileVerifier --> HashVerifier
FileVerifier --> FileStorage

@enduml
